--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     <!-- Hero -->
     <section class="hero">
         <div class="app-icon">
-            <img src="iTunesArtwork@3x.png" alt="Mach 2 app icon">
+            <img src="images/iTunesArtwork@3x.png" alt="Mach 2 app icon">
         </div>
         <p class="wordmark">Mach 2</p>
         <h1>Metronome</h1>
@@ -345,15 +345,15 @@
     <!-- Screenshots -->
     <section class="screenshots-section">
         <div class="screenshots-track">
-            <div class="screenshot-item hero-shot"><img src="01-hero-dark-120bpm.png" alt="Mach 2 home screen at 120 BPM"></div>
-            <div class="screenshot-item"><img src="04a-teal-72bpm.png" alt="Ocean theme at 72 BPM"></div>
-            <div class="screenshot-item"><img src="07-light-mode-80bpm.png" alt="Light mode at 80 BPM"></div>
-            <div class="screenshot-item"><img src="02-rhythm-dark.png" alt="Rhythm settings page"></div>
-            <div class="screenshot-item"><img src="05-presets-dark.png" alt="Presets and setlists"></div>
-            <div class="screenshot-item"><img src="04b-pink-160bpm.png" alt="Custom pink theme at 160 BPM"></div>
-            <div class="screenshot-item"><img src="06-theme-customization.png" alt="Theme customization"></div>
-            <div class="screenshot-item"><img src="03-practice-arcs.png" alt="Practice mode with arcs"></div>
-            <div class="screenshot-item"><img src="08-practice-stats.png" alt="Practice statistics"></div>
+            <div class="screenshot-item hero-shot"><img src="images/01-hero-dark-120bpm.png" alt="Mach 2 home screen at 120 BPM"></div>
+            <div class="screenshot-item"><img src="images/04a-teal-72bpm.png" alt="Ocean theme at 72 BPM"></div>
+            <div class="screenshot-item"><img src="images/07-light-mode-80bpm.png" alt="Light mode at 80 BPM"></div>
+            <div class="screenshot-item"><img src="images/02-rhythm-dark.png" alt="Rhythm settings page"></div>
+            <div class="screenshot-item"><img src="images/05-presets-dark.png" alt="Presets and setlists"></div>
+            <div class="screenshot-item"><img src="images/04b-pink-160bpm.png" alt="Custom pink theme at 160 BPM"></div>
+            <div class="screenshot-item"><img src="images/06-theme-customization.png" alt="Theme customization"></div>
+            <div class="screenshot-item"><img src="images/03-practice-arcs.png" alt="Practice mode with arcs"></div>
+            <div class="screenshot-item"><img src="images/08-practice-stats.png" alt="Practice statistics"></div>
         </div>
     </section>
 
