--- a/index.html
+++ b/index.html
@@ -370,10 +370,10 @@
     <!-- Hero -->
     <section class="hero">
         <div class="app-icon">
-            <img src="images/app-icon.png" alt="Mach 2 app icon">
+            <img src="images/iTunesArtwork%403x.png" alt="Mach 2 app icon">
         </div>
-        <p class="wordmark">Mach 2</p>
-        <h1>Metronome</h1>
+        <p class="wordmark">Metronome</p>
+        <h1>Mach 2</h1>
         <p class="subtitle">Minimal. Beautiful. Accurate.<br>No ads. No subscription.</p>
         <div class="chips">
             <span class="chip">Rotational dial</span>
