--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
 
         .app-icon img { width: 100%; height: 100%; display: block; }
 
-        .wordmark {
-            font-size: 13px;
-            font-weight: 500;
-            letter-spacing: 0.14em;
-            text-transform: uppercase;
+        .app-type {
+            font-size: clamp(42px, 7vw, 60px);
+            font-weight: 300;
+            letter-spacing: -0.03em;
             color: var(--fg-dim);
             margin-bottom: 16px;
         }
@@ -65,7 +64,7 @@
             font-weight: 300;
             line-height: 1.05;
             letter-spacing: -0.03em;
-            margin-bottom: 16px;
+            margin-bottom: 0;
         }
 
         .subtitle {
@@ -372,8 +371,8 @@
         <div class="app-icon">
             <img src="images/iTunesArtwork%403x.png" alt="Mach 2 app icon">
         </div>
-        <p class="wordmark">Metronome</p>
         <h1>Mach 2</h1>
+        <p class="app-type">Metronome</p>
         <p class="subtitle">Minimal. Beautiful. Accurate.<br>No ads. No subscription.</p>
         <div class="chips">
             <span class="chip">Rotational dial</span>
