--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
         .app-icon img { width: 100%; height: 100%; display: block; }
 
         .app-type {
-            font-size: clamp(42px, 7vw, 60px);
-            font-weight: 300;
-            letter-spacing: -0.03em;
+            font-size: clamp(18px, 3.2vw, 26px);
+            font-weight: 400;
+            letter-spacing: 0.28em;
+            text-transform: uppercase;
             color: var(--fg-dim);
             margin-bottom: 16px;
         }
