--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
          ══════════════════════════════════════════ -->
     <footer>
         <div class="narrow">
-            <p>&copy; 2026 Mach 2 Studio &ensp;&middot;&ensp; <a href="#privacy" onclick="openPrivacy()">Privacy</a></p>
+            <p>&copy; 2026 Tangent Loop &ensp;&middot;&ensp; <a href="#privacy" onclick="openPrivacy()">Privacy</a></p>
         </div>
     </footer>
 
